[package]
name = "ultrafast-secp256k1-sys"
version = "4.0.0"
edition = "2021"
license = "MIT"
description = "Raw FFI bindings to ultrafast_secp256k1 C API"
repository = "https://github.com/UltrafastSecp256k1/UltrafastSecp256k1"
categories = ["cryptography", "external-ffi-bindings"]
keywords = ["secp256k1", "ecdsa", "schnorr", "bitcoin", "ffi"]
links = "ultrafast_secp256k1"

[build-dependencies]
cc = "1"
